# Kolokwium

Zadanie1/: Makefile  main.cpp
Zadanie2/Zadanie2/: CMakeLists.txt
Zadanie2/Zadanie2_build/: CMakeCache.txt  Makefile  cmake_install.cmake  program
Zadanie3/Zadanie3_SHARED/: CMakeLists.txt
Zadanie3/Zadanie3_USE_LIB/: CMakeLists.txt
